--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
             <version>2.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.13.2</version>
+        </dependency>
+
     </dependencies>
     
     <build>
